# Kinect-Calibration-Tools

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  kinect_ir_16-to-8-bit.cpp~  package.xml  package.xml~
src/: kinect_ir_16-to-8-bit.cpp  kinect_ir_16-to-8-bit.cpp~
