<package>

  <name>image_converter</name>
  <version>0.0.1</version>
  <description>A package for 16-bit kinect IR images to 8-bit mono</description>
  <maintainer email="anurag.vempati@mavt.ethz.ch">Anurag Vempati</maintainer>
  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>opencv2_catkin</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

</package>
